[build-system]
build-backend = "cmeel"
requires = [
  "cmeel[build]",
  "cmeel-boost ~= 1.87.0",
  "crocoddyl[build]",
  "mim-solvers[build]",
  "numdifftools",
]

[project]
dependencies = [
  "cmeel-boost ~= 1.87.0",
  "crocoddyl",
  "mim-solvers",
]
description = "Collision Avoidance for MPC"
license = "BSD-2-Clause"
name = "colmpc"
readme = "README.md"
version = "0.3.0"

[project.urls]
homepage = "https://github.com/cmake-wheel/colmpc"
upstream = "https://github.com/agimus-project/colmpc"

[tool.ruff]
extend-exclude = ["cmake"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "NPY", "PTH", "RUF", "UP", "W"]

[tool.ruff.lint.isort]
known-first-party = ["colmpc"]

[tool.tomlsort]
all = true
